# instant-ngp-base

./: CMakeLists.txt
include/: ngp.dataset.h  ngp.train.h
src/: ngp.dataset.cpp  ngp.debug.cpp
src/cuda/: ngp.cuda.dataset.cu  ngp.cuda.nerfnetwork.cuh  ngp.cuda.session.cu  ngp.cuda.session.cuh  ngp.cuda.train.cu  ngp.cuda.train.h
test/: test_baseline.cpp
